# Solana-private-transfer

./: .devnet-wallet.json  .env.example  .eslintrc.js  .gitignore  .prettierrc.js  Anchor.toml  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_VERIFICATION.md  LICENSE  README.md  TESTING_GUIDE.md  check-balance.js  check-token-account.js  devnet-zk-proof.json  fund-wallet.ts  generate-address.js  jest.config.js  make-confidential-transfer.ts  make-private-transfer-simple.ts  package-lock.json  package.json  setup-devnet-wallet.ts  verify-private-balance.ts  verify-transaction.js
client/: privacy-program-client.ts
docs/: ACHIEVEMENTS.md  ARCHITECTURE.md  BPF_COMPATIBILITY_FIX.md  COMPARISON.md  DEPENDENCY_RISK.md  DEVNET_PROOF_COMPLETE.md  DOCUMENTATION_INDEX.md  ELGAMAL_SECURITY_REVIEW.md  ELGAMAL_TO_PEDERSEN_MIGRATION.md  ERROR_HANDLING_STANDARD.md  GETTING_STARTED.md  HYBRID_VERIFICATION_ARCHITECTURE.md  KEY_STORAGE_SECURITY.md  MIGRATION_SUMMARY.md  ONE_PAGER.md  ON_CHAIN_PROGRAM.md  PEDERSEN_BULLETPROOF_COMPATIBILITY.md  PRIVACY_EXPLAINED.md  PRIVACY_LOG_FIX.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  REENTRANCY_PROTECTION.md  UPDATES_SUMMARY.md  ZK_PROOF_VERIFICATION_STATUS.md  design.md
programs/privacy-transfer/: Cargo.toml
programs/privacy-transfer/src/: crypto_primitives.rs  lib.rs  merlin_transcript.rs  proof_verification.rs
scripts/: fund-test-accounts.ts  generate-program-keypair.ts  off-chain-verification-service.ts  organize-tests.sh  security-audit.ts  setup-devnet-accounts.ts  verify-account-balances.ts
test-debug/: encrypted-balances.json
(+64 files in other folders)
